--- a/siaga.env
+++ b/siaga.env
@@ -16,5 +16,5 @@ SIAGA_TICKERTOCANDLE=true
 TEXUS_FluentBitUrl=fluentd.k8s.xunlang.home
 
 SIAGA_UPSTREAM_REDIS_LIST=SILVER
-SIAGA_UPSTREAM_REDIS_SILVER_URL=10.66.66.20:6379
+SIAGA_UPSTREAM_REDIS_SILVER_URL=fluentd.k8s.xunlang.home:6379
 SIAGA_UPSTREAM_REDIS_SILVER_INDEX=4
