只收到一条消息问题的修复

--- a/configs/basicConfig.json
+++ b/configs/basicConfig.json
@@ -153,7 +153,7 @@
 		},
 		"redisRemotes": {
 			"master": {
-				"url": "fluentd.k8s.xunlang.home:6379",
+				"url": "this Set is abandend, use env insted",
 				"password": "",
 				"index": 5,
 				"description": ""
