--- a/configs/basicConfig.json
+++ b/configs/basicConfig.json
@@ -153,7 +153,7 @@
 		},
 		"redisRemotes": {
 			"master": {
-				"url": "this Set is abandend, use env insted",
+				"url": "this Set is abandend, use env instead",
 				"password": "",
 				"index": 5,
 				"description": ""
